--- a/freelancer/main_app/templates/base.html
+++ b/freelancer/main_app/templates/base.html
@@ -19,14 +19,16 @@
         <div class="nav-wrapper">
           <ul>
             <li>
-              <a href="/" class="left brand-logo">&nbsp;&nbsp;freelancer</a>
+              <a href="/" class="left brand-logo">&nbsp;&nbsp;Freelancer</a>
             </li>
           </ul>
           <ul class="right">
             {% if user.is_authenticated %}
-            <li><a href="">logout</a></li>
+            <li><a href="">{{user}}</a></li>
+            <li><a href="{% url 'logout' %}">logout</a></li>
             {% else %}
-            <li><a href="">login</a></li>
+                <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                <li><a href="{% url 'login' %}">Log In</a></li>
             {% endif %}
           </ul>
         </div>
