--- a/freelancer/main_app/templates/jobs/job_detail.html
+++ b/freelancer/main_app/templates/jobs/job_detail.html
@@ -11,10 +11,17 @@
   </div>
 
 {% if user.is_authenticated and user.id != job.client.id %}
-  <form action="" method="POST">
+  {% if user_have_requested %}
+  <form action="{% url 'delete_request' pk=job.id%}" method="POST">
+    {% csrf_token %}
+    <button type="submit">Cancel Request</button>
+  </form>
+  {% else %}
+  <form action="{% url 'send_request' pk=job.id%}" method="POST">
     {% csrf_token %}
     <button type="submit">Request To Work</button>
   </form>
+  {% endif %}
 {% endif %}
 {% if user.is_authenticated and user.id == job.client.id %}
   <form action="{% url 'jobs_delete' pk=job.id%}" method="POST">
