Add edit profile functionality

--- a/freelancer/main_app/templates/profiles/detail.html
+++ b/freelancer/main_app/templates/profiles/detail.html
@@ -39,6 +39,6 @@
       <div class="card-footer">{{job.reward}}</div>
     </div>
 {% endfor %}
-<a href="{% url 'profiles_update' user.id %}"><button>Edit Profile</button></a>
+<a href="{% url 'profiles_edit' %}"><button>Edit Profile</button></a>
 {% endif %}
 {% endblock %}
