--- a/freelancer/main_app/templates/auth/user_form.html
+++ b/freelancer/main_app/templates/auth/user_form.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-
-{{form.as_p}}
+<form action="" method="POST">
+  {% csrf_token %}
+  {{form.as_p}}
+  <button type="submit">Edit Profile</button>
+</form>
 
 {% endblock %}
