--- a/freelancer/main_app/templates/profiles/edit.html
+++ b/freelancer/main_app/templates/profiles/edit.html
@@ -1,20 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h1>{{profile_user}}'s Profile</h1>
-{% if profile_user.first_name and profile_user.last_name %}
-  <h3>Name:</h3>
-  <p>{{profile_user.first_name}} {{profile_user.last_name}}</p>
-{% endif %}
-{% if profile_user.email %}
-  <h3>email:</h3>
-  <p>{{ profile_user.email }}</p>
-{% endif %}
-<h3>Category:</h3>
-<p> {{ profile_user.profile.category }}</p>
-<h3>Bio:</h3>
-<p> {{ profile_user.profile.bio }}</p>
-{% if user.is_authenticated and user.id == profile_user.id %}
-<a href="{% url 'profiles_update' user.id %}"><button>Edit Profile</button></a>
-{% endif %}
+<form action="{% url 'profiles_edit' %}" method="POST">
+  {% csrf_token %}
+  <label for="first_name">First Name</label>
+  <input type="text" name="first_name" id="first_name" value="{{profile_user.first_name}}">
+  <label for="first_name">Last Name</label>
+  <input type="text" name="last_name" id="last_name" value="{{profile_user.last_name}}">
+  <label for="bio">Bio</label>
+  <textarea name="bio" id="bio" value="{{profile_user.bio}}"></textarea>
+  <button type="submit">Edit Profile</button>
+</form>
 {% endblock %}
