--- a/freelancer/main_app/templates/base.html
+++ b/freelancer/main_app/templates/base.html
@@ -5,43 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Freelancer</title>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
     {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" >
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
-  <body>
-    <header class="navbar-fixed">
-      <nav>
-        <div class="nav-wrapper">
-          <ul>
-            <li>
-              <a href="/" class="left brand-logo">&nbsp;&nbsp;Freelancer</a>
-            </li>
-          </ul>
-          <ul class="right">
-            <li><a href="{% url 'jobs_list' %}">Jobs</a></li>
-            {% if user.is_authenticated %}
-            <li><a href="{% url 'jobs_create' %}">list a Job</a></li>
-            <li><a href="{% url 'notifications' pk=user.id%}">Notifications</a></li>
-            <li><a href="{% url 'profiles_detail' user_id=user.id%}">{{user}}</a></li>
-            <li><a href="{% url 'logout' %}">logout</a></li>
-            {% else %}
-                <li><a href="{% url 'signup' %}">Sign Up</a></li>
-                <li><a href="{% url 'login' %}">Log In</a></li>
-            {% endif %}
-          </ul>
+  <body class="d-flex flex-column min-vh-100">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+        <div class="container">
+          <a href="/" class="navbar-brand fw-bold">Freelancer</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a href="{% url 'jobs_list' %}" class="nav-link">Jobs</a></li>
+              {% if user.is_authenticated %}
+                <li class="nav-item"><a href="{% url 'jobs_create' %}" class="nav-link">List a Job</a></li>
+                <li class="nav-item"><a href="{% url 'notifications' pk=user.id%}" class="nav-link">Notifications</a></li>
+                <li class="nav-item"><a href="{% url 'profiles_detail' user_id=user.id%}" class="nav-link">{{user}}</a></li>
+                <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">Logout</a></li>
+              {% else %}
+                <li class="nav-item"><a href="{% url 'signup' %}" class="nav-link">Sign Up</a></li>
+                <li class="nav-item"><a href="{% url 'login' %}" class="nav-link">Log In</a></li>
+              {% endif %}
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
-    <main class="container">{% block content %} {% endblock %}</main>
-    <footer class="page-footer">
-      <div class="right">
+    <main class="container my-4 flex-grow-1">
+      {% block content %} {% endblock %}
+    </main>
+    <footer class="page-footer bg-light py-3 mt-auto border-top">
+      <div class="container text-end text-muted small">
         All Rights Reserved, &copy; 2025 freelancer &nbsp;
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
