--- a/freelancer/main_app/templates/profiles/edit.html
+++ b/freelancer/main_app/templates/profiles/edit.html
@@ -1,13 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action="{% url 'profiles_edit' %}" method="POST">
-  {% csrf_token %}
-  <label for="first_name">First Name</label>
-  <input type="text" name="first_name" id="first_name" value="{{profile_user.first_name}}">
-  <label for="first_name">Last Name</label>
-  <input type="text" name="last_name" id="last_name" value="{{profile_user.last_name}}">
-  <label for="bio">Bio</label>
-  <textarea name="bio" id="bio" value="{{profile_user.bio}}"></textarea>
-  <button type="submit">Edit Profile</button>
-</form>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
+      <div class="card shadow-sm mt-4">
+        <div class="card-body">
+          <h2 class="card-title mb-4">Edit Profile</h2>
+          <form action="{% url 'profiles_edit' %}" method="POST">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="first_name" class="form-label">First Name</label>
+              <input type="text" name="first_name" id="first_name" class="form-control" value="{{profile_user.first_name}}">
+            </div>
+            <div class="mb-3">
+              <label for="last_name" class="form-label">Last Name</label>
+              <input type="text" name="last_name" id="last_name" class="form-control" value="{{profile_user.last_name}}">
+            </div>
+            <div class="mb-3">
+              <label for="bio" class="form-label">Bio</label>
+              <textarea name="bio" id="bio" class="form-control" rows="4">{{profile_user.profile.bio}}</textarea>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Edit Profile</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
