--- a/freelancer/main_app/templates/registration/signup.html
+++ b/freelancer/main_app/templates/registration/signup.html
@@ -1,17 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Sign Up</h1>
-
-{% if error_message %}
-  <p class="red-text">
-  {{ error_message }}
-</p>{% endif %}
-
-<form method="post" action="{% url 'signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" class="btn" value="Sign Up">
-</form>
+<div class="container py-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6 col-lg-4">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h1 class="card-title mb-4 text-center">Sign Up</h1>
+          {% if error_message %}
+            <div class="alert alert-danger text-center">
+              {{ error_message }}
+            </div>
+          {% endif %}
+          <form method="post" action="{% url 'signup' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
